--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,8 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/vim-tmux-focus-events'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
+set -g @plugin 'rickstaa/tmux-notify'
 
 unbind r
 unbind h
@@ -83,7 +85,17 @@ set -g pane-active-border-style fg='colour154'
 setw -g window-status-separator ''
 setw -g window-status-style fg='colour121',bg='colour235',none
 set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] #(whoami)  #(uptime  | cut -d " " -f 1,2,3) #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
-set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %r  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #(echo " Jojo MBook ") #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #(rainbarf --battery --remaining --no-rgb) '
+set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %r  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238]#{pomodoro_status}  #(echo "🎯 ") #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #(rainbarf --battery --remaining --no-rgb) '
+
+# set -g status-right "#{pomodoro_status}"
+set -g @pomodoro_granularity 'on'
+set -g status-interval 1
+set -g @pomodoro_sound 'on'                   # Sound for desktop notifications (Run `ls /System/Library/Sounds` for a list of sounds to use on Mac)
+set -g @pomodoro_notifications 'on'           # Enable desktop notifications from your terminal
+set -g @pomodoro_granularity 'on'
+set -g @pomodoro_toggle 'o'                    # Start/pause a Pomodoro/break
+set -g @pomodoro_cancel 'O'                    # Cancel the current session
+set -g @pomodoro_skip '_'
 
 # set -g pane-active-border-style fg=colour208,bg=default
 # set -g pane-active-border-bg default
