--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,9 @@ unbind C-b
 set-window-option -g aggressive-resize on
 set-option -sg escape-time 10
 set-option -g default-terminal "screen-256color"
+# set-default colorset-option -ga terminal-overrides ",xterm-256color:Tc"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
 set-option -g default-shell /bin/zsh
 set-option -g mode-keys vi
 
