better colors for tmux pane-lines

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,15 +2,15 @@ unbind C-b
 
 set-window-option -g aggressive-resize on
 set-option -sg escape-time 10
-set-option -g default-terminal "screen-256color"
+# set-option -g default-terminal "screen-256color"
 # set-default colorset-option -ga terminal-overrides ",xterm-256color:Tc"
-set -ga terminal-overrides ",xterm-256color:Tc"
+# set -ga terminal-overrides ",xterm-256color:Tc"
 
 set-option -g default-shell /bin/zsh
 set-option -g mode-keys vi
 
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+# set -g default-terminal "screen-256color"
+# set -ga terminal-overrides ",*256col*:Tc"
 
 set-option -gw xterm-keys on
 
@@ -104,10 +104,17 @@ set -g @pomodoro_skip '_'
 # set -g pane-active-border-bg default
 # set -g pane-active-border-fg colour208
 
+set -g pane-active-border-style fg=colour11,bg=default
+set -g pane-border-style fg=colour8,bg=default
+
 set -g base-index 1 # Numbering of windows
 setw -g pane-base-index 1 # Numbering of Panes
 
 bind \\ split-window -h -c "#{pane_current_path}" # Split panes horizontal
 bind - split-window -v -c "#{pane_current_path}" # Split panes vertically
+set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+set-option -gs default-terminal "tmux-256color"
+set-option -gas terminal-overrides "*:Tc"
+set-option -gas terminal-overrides "*:RGB"
 
 run '~/.tmux/plugins/tpm/tpm'
