tmux cool plugins!

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,8 +13,6 @@ set-option -g mode-keys vi
 # set -ga terminal-overrides ",*256col*:Tc"
 
 set-option -gw xterm-keys on
-
-set-option -g status-position bottom
 set -g prefix C-a
 set -g base-index 1
 set -g pane-base-index 1
@@ -34,12 +32,16 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'rickstaa/tmux-notify'
 
+set -g @plugin 'tmux-plugins/tmux-urlview'
+# set -g @urlview-key 'x'
+
 unbind r
 unbind h
 unbind j
 unbind k
 unbind l
 bind r source-file ~/.tmux.conf
+# https://youtube.com
 
 bind-key -r i run-shell "tmux new sh ./.local/scripts/tmux-cht.sh"
 
@@ -51,9 +53,9 @@ bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
 bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+  "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\' 'select-pane -l'"
 if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+  "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\' 'select-pane -l'"
 
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
@@ -62,21 +64,17 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 set -g mouse off
-######################
-### DESIGN CHANGES ###
-######################
 
 # loud or quiet?
 set -g visual-activity off
 set -g visual-bell off
 set -g visual-silence off
-setw -g monitor-activity off
+set -g monitor-activity off
 set -g bell-action none
 
-#
 set -g status 'on'
 set -g status-position top
-set -g status-bg 'colour235'
+set -g status-bg 'colour232'
 set -g status-justify 'centre'
 set -g status-left-length '100'
 set -g status-right-length '100'
@@ -86,11 +84,14 @@ set -g message-command-style fg='colour222',bg='colour238'
 set -g pane-active-border-style fg='colour154'
 # setw -g window-status-activity-style fg='colour154',bg='colour235',none
 setw -g window-status-separator ''
-setw -g window-status-style fg='colour121',bg='colour235',none
-set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] #(whoami)  #(uptime  | cut -d " " -f 1,2,3) #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
-set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %r  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238]#{pomodoro_status}  #(echo "🎯 ") #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #(rainbarf --battery --remaining --no-rgb) '
+setw -g window-status-style fg='colour121',bg='colour232',none
+set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour236,bg=colour232,nobold,nounderscore,noitalics] #(gitmux "#{pane_current_path}") '
+set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour122,bg=colour232] %r  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238]#{pomodoro_status}  #(echo "🎯 ") #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #(rainbarf --battery --remaining --no-rgb) '
+set -g window-status-current-style "bg=colour3,fg=default"
+set -g window-status-separator ''
+set -g window-status-format "#{?window_start_flag,, } #I:#W #{?window_flags,,}"
+set -g window-status-current-format "#{?window_start_flag,, } #I:#W #{?window_flags,, }"
 
-# set -g status-right "#{pomodoro_status}"
 set -g @pomodoro_granularity 'on'
 set -g status-interval 1
 set -g @pomodoro_sound 'on'                   # Sound for desktop notifications (Run `ls /System/Library/Sounds` for a list of sounds to use on Mac)
@@ -99,10 +100,6 @@ set -g @pomodoro_granularity 'on'
 set -g @pomodoro_toggle 'o'                    # Start/pause a Pomodoro/break
 set -g @pomodoro_cancel 'O'                    # Cancel the current session
 set -g @pomodoro_skip '_'
-
-# set -g pane-active-border-style fg=colour208,bg=default
-# set -g pane-active-border-bg default
-# set -g pane-active-border-fg colour208
 
 set -g pane-active-border-style fg=colour11,bg=default
 set -g pane-border-style fg=colour8,bg=default
