--- a/.tmuxinator/b.yml
+++ b/.tmuxinator/b.yml
@@ -25,9 +25,9 @@ windows:
       # layout: afa4,212x56,0,0{101x56,0,0,1,110x56,102,0[110x28,102,0,4,110x27,102,29,5]}
       layout: 53a1,213x51,0,0{131x51,0,0,18,81x51,132,0[81x25,132,0,86,81x25,132,26,90]}
       panes:
-        - nvim
-        -
-        -
+        - cd ~/ && cls && nvim
+        - cd ~/ && cls
+        - cd ~/ && cls
   - stuff:
       #layout: c108,238x51,0,0[238x10,0,0,1,238x40,0,11,4]
       # layout: f597,212x56,0,0{161x56,0,0,2,50x56,162,0,6}
@@ -35,7 +35,7 @@ windows:
       layout: 53a1,213x51,0,0{131x51,0,0,18,81x51,132,0[81x25,132,0,86,81x25,132,26,90]}
       panes:
         - bpytop
-        -
+        - cd ~/ && cls
 
 
   # - bpytop: bpytop
