right tmux colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -74,26 +74,24 @@ set -g bell-action none
 
 set -g status 'on'
 set -g status-position top
-set -g status-bg 'colour232'
+set -g status-bg 'colour235'
 set -g status-justify 'centre'
 set -g status-left-length '100'
 set -g status-right-length '100'
 set -g message-style fg='colour222',bg='colour238'
 set -g message-command-style fg='colour222',bg='colour238'
-# set -g pane-border-style fg='colour238'
 set -g pane-active-border-style fg='colour154'
-# setw -g window-status-activity-style fg='colour154',bg='colour235',none
 setw -g window-status-separator ''
-setw -g window-status-style fg='colour121',bg='colour232',none
-set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour236,bg=colour232,nobold,nounderscore,noitalics] #(gitmux "#{pane_current_path}") '
-set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour122,bg=colour232] %r  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238]#{pomodoro_status}  #(echo "🎯 ") #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #(rainbarf --battery --remaining --no-rgb) '
+setw -g window-status-style fg='colour121',bg='colour235',none
+set -g status-left '#[fg=colour235,bg=colour154] #S #[fg=colour236,bg=colour235,nobold,nounderscore,noitalics] #(gitmux "#{pane_current_path}") '
+set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour122,bg=colour235] %r  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238]#{pomodoro_status}  #(echo "🎯 ") #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #(rainbarf --battery --remaining --no-rgb) '
 set -g window-status-current-style "bg=colour3,fg=default"
 set -g window-status-separator ''
 set -g window-status-format "#{?window_start_flag,, } #I:#W #{?window_flags,,}"
 set -g window-status-current-format "#{?window_start_flag,, } #I:#W #{?window_flags,, }"
 
-set -g @pomodoro_granularity 'on'
 set -g status-interval 1
+set -g @pomodoro_granularity 'on'
 set -g @pomodoro_sound 'on'                   # Sound for desktop notifications (Run `ls /System/Library/Sounds` for a list of sounds to use on Mac)
 set -g @pomodoro_notifications 'on'           # Enable desktop notifications from your terminal
 set -g @pomodoro_granularity 'on'
@@ -105,7 +103,7 @@ set -g pane-active-border-style fg=colour11,bg=default
 set -g pane-border-style fg=colour8,bg=default
 
 set -g base-index 1 # Numbering of windows
-setw -g pane-base-index 1 # Numbering of Panes
+set -g pane-base-index 1 # Numbering of Panes
 
 bind \\ split-window -h -c "#{pane_current_path}" # Split panes horizontal
 bind - split-window -v -c "#{pane_current_path}" # Split panes vertically
