--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,7 @@ set -g base-index 1
 set -g pane-base-index 1
 set -g focus-events on
 
+
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
 
@@ -41,7 +42,6 @@ unbind j
 unbind k
 unbind l
 bind r source-file ~/.tmux.conf
-# https://youtube.com
 
 bind-key -r i run-shell "tmux new sh ./.local/scripts/tmux-cht.sh"
 
@@ -93,7 +93,7 @@ set -g window-status-current-format "#{?window_start_flag,, } #I:#W #{?window_fl
 set -g status-interval 1
 set -g @pomodoro_granularity 'on'
 set -g @pomodoro_sound 'on'                   # Sound for desktop notifications (Run `ls /System/Library/Sounds` for a list of sounds to use on Mac)
-set -g @pomodoro_notifications 'on'           # Enable desktop notifications from your terminal
+set -g @pomodoro_notifications 'off'           # Enable desktop notifications from your terminal
 set -g @pomodoro_granularity 'on'
 set -g @pomodoro_toggle 'o'                    # Start/pause a Pomodoro/break
 set -g @pomodoro_cancel 'O'                    # Cancel the current session
@@ -105,11 +105,17 @@ set -g pane-border-style fg=colour8,bg=default
 set -g base-index 1 # Numbering of windows
 set -g pane-base-index 1 # Numbering of Panes
 
-bind \\ split-window -h -c "#{pane_current_path}" # Split panes horizontal
+bind |  split-window -h -c "#{pane_current_path}" # Split panes horizontal
 bind - split-window -v -c "#{pane_current_path}" # Split panes vertically
 set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
-set-option -gs default-terminal "tmux-256color"
+# set-option -gs default-terminal "tmux-256color"
+set-option -gs default-terminal "xterm-256color"
+ # set -g default-terminal "rxvt-unicode-256color"
+
+
 set-option -gas terminal-overrides "*:Tc"
 set-option -gas terminal-overrides "*:RGB"
+
+bind . display-popup -E -d "#{pane_current_path}"
 
 run '~/.tmux/plugins/tpm/tpm'
