flash.nvim instead of Hop.nvim :)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -116,6 +116,18 @@ set-option -gs default-terminal "xterm-256color"
 set-option -gas terminal-overrides "*:Tc"
 set-option -gas terminal-overrides "*:RGB"
 
-bind . display-popup -E -d "#{pane_current_path}"
+# bind . display-popup -E -d "#{pane_current_path}"
+
+# bind-key . run-shell '~/.bin/popuptmux'
+
+bind . if-shell -F '#{==:#{session_name},scratch}' {
+    detach-client
+  } {
+    if-shell "tmux has-session -t scratch" {
+      display-popup  -h 80% -w 80%  -E "tmux attach-session -t scratch"
+    } {
+      display-popup  -h 80% -w 80% -E "tmux new-session -d -c '#{pane_current_path}' -s scratch && tmux set-option -t scratch status off && tmux attach-session -t scratch"
+    }
+}
 
 run '~/.tmux/plugins/tpm/tpm'
