--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,8 +66,8 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 set -g mouse off
 
 # loud or quiet?
-set -g visual-activity off
-set -g visual-bell off
+set -g visual-activity on
+set -g visual-bell on
 set -g visual-silence off
 set -g monitor-activity off
 set -g bell-action none
@@ -93,7 +93,7 @@ set -g window-status-current-format "#{?window_start_flag,, } #I:#W #{?window_fl
 set -g status-interval 1
 set -g @pomodoro_granularity 'on'
 set -g @pomodoro_sound 'on'                   # Sound for desktop notifications (Run `ls /System/Library/Sounds` for a list of sounds to use on Mac)
-set -g @pomodoro_notifications 'off'           # Enable desktop notifications from your terminal
+set -g @pomodoro_notifications 'on'           # Enable desktop notifications from your terminal
 set -g @pomodoro_granularity 'on'
 set -g @pomodoro_toggle 'o'                    # Start/pause a Pomodoro/break
 set -g @pomodoro_cancel 'O'                    # Cancel the current session
