updates for nvim 0.11 :)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,6 @@ set -g @plugin 'tmux-plugins/vim-tmux-focus-events'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'rickstaa/tmux-notify'
-
 set -g @plugin 'tmux-plugins/tmux-urlview'
 # set -g @urlview-key 'x'
 
@@ -43,7 +42,7 @@ unbind k
 unbind l
 bind r source-file ~/.tmux.conf
 
-bind-key -r i run-shell "tmux new sh ./.local/scripts/tmux-cht.sh"
+# bind-key -r i run-shell "tmux new sh ./.local/scripts/tmux-cht.sh"
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
