--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,10 +62,14 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
+bind-key n command-prompt -p "window name:" "new-window; rename-window '%%'"
+
 set -g mouse off
 
 # loud or quiet?
-set -g visual-activity on
+# image in terminal
+set -gq allow-passthrough on
+set -g visual-activity off
 set -g visual-bell on
 set -g visual-silence off
 set -g monitor-activity off
