--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -5,9 +5,9 @@
 # theme = ayu
 
 font-family = "JetBrainsMono Nerd Font Mono"
-font-size = 27
+font-size = 24
 background-opacity = 0.85
-background-blur-radius = 30
+background-blur-radius = 20
 window-decoration = false
 
 ###########################
@@ -15,12 +15,7 @@ window-decoration = false
 ###########################
 
 # custom-shader = shaders/bettercrt.glsl
-# custom-shader = shaders/bloom.glsl
-# custom-shader = shaders/bloom1.glsl
-# custom-shader = shaders/bloom025.glsl
-# custom-shader = shaders/bloom050.glsl
-# custom-shader = shaders/bloom060.glsl
-# custom-shader = shaders/bloom075.glsl
+ custom-shader = shaders/bloom.glsl
 # custom-shader = shaders/crt.glsl
 # custom-shader = shaders/cubes.glsl
 # custom-shader = shaders/dither.glsl
@@ -42,5 +37,5 @@ window-decoration = false
 # custom-shader = shaders/starfield-colors.glsl
 # custom-shader = shaders/starfield.glsl
 # custom-shader = shaders/tft.glsl
- custom-shader = shaders/underwater.glsl
+# custom-shader = shaders/underwater.glsl
 # custom-shader = shaders/water.glsl
