--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,11 +80,8 @@ set -g status-bg default
 set -g status-justify 'centre'
 set -g status-left-length '100'
 set -g status-right-length '100'
-# set -g message-style fg='colour222',bg='colour238'
-# set -g message-command-style fg='colour222',bg='colour238'
-# set -g pane-active-border-style fg='colour154'
-setw -g window-status-separator ''
-#setw -g window-status-style fg='colour121',bg='colour235',none
+set -g window-status-separator ''
+set-window-option -g window-status-separator ''
 set -g status-left '#[fg=colour235,bg=colour154] #S #[fg=colour236,bg=colour235,nobold,nounderscore,noitalics] #(gitmux "#{pane_current_path}") '
 set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour123,bg=colour235] %r  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238]#{pomodoro_status}  #(echo "🎯 ") #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #(rainbarf --battery --remaining --no-rgb) '
 set -g window-status-current-style "bg=colour3,fg=default"
