--- a/.tmuxinator/getvendor.yml
+++ b/.tmuxinator/getvendor.yml
@@ -1,6 +1,5 @@
-name: Personal
-root: ~/projects/
-# root: <%= @args[0] ? @args[0]: __dir__ %>
+name: GetVendor
+root: ~/git/colab-sap-integration-get-vendor/
 
 
 # Optional tmux socket
