custom telescope & more muxinator session

--- a/.tmuxinator/mobilidade.yml
+++ b/.tmuxinator/mobilidade.yml
@@ -1,5 +1,5 @@
-name: Concur
-root: ~/git/colab-refund-employee-integration-backend/
+name: Mobilidade
+root: ~/git/colab-integracoes-externas-uber
 # root: <%= @args[0] ? @args[0]: __dir__ %>
 
 
