--- a/.tmuxinator/b.yml
+++ b/.tmuxinator/b.yml
@@ -28,10 +28,10 @@ windows:
         - nvim
         -
         -
-  - stats:
+  - postman:
       layout: 53a1,213x51,0,0{131x51,0,0,18,81x51,132,0[81x25,132,0,86,81x25,132,26,90]}
       panes:
-        - bpytop
+        - nvim ~/http.rest
         -
 
 
