tmux.conf & cmus

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -146,6 +146,8 @@ bind-key "b" display-popup -E -w 40% "sesh connect \"$(
  sesh list -i | gum filter --limit 1 --no-sort --fuzzy --placeholder 'Pick a sesh' --height 50 --prompt='⚡'
 )\""
 
+bind-key n command-prompt -p "New window name:" "new-window; rename-window '%%'"
+
 # fzf menu to kill sessions
 # Credit: video below by Waylon Walker
 # https://www.youtube.com/watch?v=QWPyYx54JbE
