ignore gcloud folder

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 .config/nvim/lua/config/dap/adapters/**/*
 .config/StardewValley
 .config/containers
-.config/gloud
+.config/gloud/**/*
 .local/bin
 .local/pipx
 .local/share
