--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -19,7 +19,6 @@ window-padding-balance = true
 ###########################
 
 # custom-shader = shaders/glitch-jojo.glsl
-
 # custom-shader = shaders/bettercrt.glsl
 # custom-shader = shaders/bloom.glsl
 # custom-shader = shaders/crt.glsl
@@ -45,3 +44,10 @@ window-padding-balance = true
 # custom-shader = shaders/tft.glsl
 # custom-shader = shaders/underwater.glsl
 # custom-shader = shaders/water.glsl
+
+# custom-shader = shaders/cursor_blaze.glsl
+# custom-shader = shaders/cursor_blaze_no_trail.glsl
+# custom-shader = shaders/cursor_smear.glsl
+# custom-shader = shaders/cursor_smear_fade.glsl
+# custom-shader = shaders/debug_cursor_animated.glsl
+# custom-shader = shaders/debug_cursor_static.glsl
