add new tmux theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,22 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'rickstaa/tmux-notify'
 
+set -g @plugin 'wfxr/tmux-power'
+set -g @plugin 'wfxr/tmux-power'
+set -g @plugin 'wfxr/tmux-net-speed'
+set -g @tmux_power_theme 'everforest'
+set -g @tmux_power_date_icon           ''
+set -g @tmux_power_time_icon           ''
+set -g @tmux_power_user_icon           ''
+set -g @tmux_power_session_icon        ''
+set -g @tmux_power_right_arrow_icon    ''
+set -g @tmux_power_left_arrow_icon     ''
+set -g @tmux_power_upload_speed_icon   '󰕒'
+set -g @tmux_power_download_speed_icon '󰇚'
+set -g @tmux_power_show_user    true
+set -g @tmux_power_show_host    false
+set -g @tmux_power_show_session true
+
 unbind r
 unbind h
 unbind j
