add tmux notify custom script notify.sh prefix + m

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,13 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/vim-tmux-focus-events'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
+# notifications via ntfy
 set -g @plugin 'rickstaa/tmux-notify'
+set -g @tnotify-verbose 'on'
+set -g @tnotify-custom-cmd 'bash ~/dot/notification.sh'
+set -g @tnotify-sleep-duration '1'
+set -g @tnotify-prompt-suffixes '❯'
+
 
 set -g @plugin 'wfxr/tmux-power'
 set -g @plugin 'wfxr/tmux-power'
@@ -80,9 +86,11 @@ set -g mouse off
 # loud or quiet?
 # image in terminal
 set -gq allow-passthrough on
-set -g visual-activity off
 set -g visual-bell on
 set -g visual-silence off
+set -g visual-activity on
+setw -g monitor-activity on
+
 set -g monitor-activity off
 set -g bell-action none
 
