tmux bar customizations

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,18 @@ set -g @tnotify-prompt-suffixes '❯'
 set -g @plugin 'wfxr/tmux-power'
 set -g @plugin 'wfxr/tmux-power'
 set -g @plugin 'wfxr/tmux-net-speed'
-set -g @tmux_power_theme 'everforest'
+set -g @plugin 'wfxr/tmux-web-reachable'
+
+## Themes
+#
+# set -g @tmux_power_theme 'everforest'
+# set -g @tmux_power_theme 'moon'
+set -g @tmux_power_theme 'coral'
+# set -g @tmux_power_theme 'snow'
+# set -g @tmux_power_theme 'forest'
+# set -g @tmux_power_theme 'violet'
+# set -g @tmux_power_theme 'redwine'
+
 set -g @tmux_power_date_icon           ''
 set -g @tmux_power_time_icon           ''
 set -g @tmux_power_user_icon           ''
@@ -51,6 +62,10 @@ set -g @tmux_power_download_speed_icon '󰇚'
 set -g @tmux_power_show_user    true
 set -g @tmux_power_show_host    false
 set -g @tmux_power_show_session true
+set -g @tmux_power_date_format '%m/%d/%Y '
+set -g @tmux_power_show_upload_speed   true
+set -g @tmux_power_show_download_speed true
+set -g @tmux_power_show_web_reachable true
 
 unbind r
 unbind h
