fix tmux date format

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,7 +62,7 @@ set -g @tmux_power_download_speed_icon '󰇚'
 set -g @tmux_power_show_user    true
 set -g @tmux_power_show_host    false
 set -g @tmux_power_show_session true
-set -g @tmux_power_date_format '%m/%d/%Y '
+set -g @tmux_power_date_format '%d/%m/%Y '
 set -g @tmux_power_show_upload_speed   true
 set -g @tmux_power_show_download_speed true
 set -g @tmux_power_show_web_reachable true
