--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,8 @@ set -g base-index 1
 set -g pane-base-index 1
 set -g focus-events on
 
+set -as terminal-features ",*:RGB"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
