--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,10 +47,10 @@ set -g @plugin 'wfxr/tmux-web-reachable'
 #
 # set -g @tmux_power_theme 'everforest'
 # set -g @tmux_power_theme 'moon'
-set -g @tmux_power_theme 'coral'
+# set -g @tmux_power_theme 'coral'
 # set -g @tmux_power_theme 'snow'
 # set -g @tmux_power_theme 'forest'
-# set -g @tmux_power_theme 'violet'
+set -g @tmux_power_theme 'violet'
 # set -g @tmux_power_theme 'redwine'
 
 set -g @tmux_power_date_icon           ''
@@ -97,6 +97,8 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 bind-key n command-prompt -p "window name:" "new-window; rename-window '%%'"
+
+bind g run "~/dot/open-github.sh"
 
 set -g mouse off
 
