vim plugins cleanup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/vim-tmux-focus-events'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+
 # notifications via ntfy
 set -g @plugin 'rickstaa/tmux-notify'
 set -g @tnotify-verbose 'on'
@@ -45,12 +47,12 @@ set -g @plugin 'wfxr/tmux-web-reachable'
 
 ## Themes
 #
-# set -g @tmux_power_theme 'everforest'
+set -g @tmux_power_theme 'everforest'
 # set -g @tmux_power_theme 'moon'
 # set -g @tmux_power_theme 'coral'
 # set -g @tmux_power_theme 'snow'
 # set -g @tmux_power_theme 'forest'
-set -g @tmux_power_theme 'violet'
+# set -g @tmux_power_theme 'violet'
 # set -g @tmux_power_theme 'redwine'
 
 set -g @tmux_power_date_icon           ''
